[tool.poetry]
name = "lunarapi"
version = "1.12.0"
authors = ["WinterFe <winter@lunardev.group>"]
description = "Wrapper for the Lunar API"
readme = "README.md"
homepage = "https://pypi.org/project/lunarapi/"
documentation = "https://docs.lunardev.group/"
keywords = ["discord", "api", "wrapper"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = ">=3.6.0,<3.8.0"
python-dotenv = "^0.20.0"
Pillow = "^9.2.0"
typing-extensions = { version = ">=4.1.0,<4.3.0", python = ">=3.8,<3.9" }

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.dev.dependencies]
black = {version = "^22.8.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
